--- a/src/app/features/Application/app-view-seeker/app-view-seeker.html
+++ b/src/app/features/Application/app-view-seeker/app-view-seeker.html
@@ -1,7 +1,7 @@
 <div>
-    <div class="header-section">
+    <div class="header-section fade-line">
         <div class="title-container">
-            <div class="d-flex">
+            <div class="d-flex fade-line">
                 <div class="icon">
                     <i class="bi bi-buildings"></i>
                 </div>
@@ -17,32 +17,32 @@
         <div class="applications-section my-3">
             <div *ngIf="isLoading()" class="loading"><app-loading-page></app-loading-page></div>
 
-            <div *ngIf="!isLoading()" class="results-container">
+            <div *ngIf="!isLoading()" class="results-container fade-line">
                 <div class="results-info">
                     <h5>{{applicationsList().length}} Application{{applicationsList().length !== 1 ? 's' : ''}} found</h5>
                 </div>
 
 
                 <div *ngIf="applicationsList().length > 0" class="application-list">
-                    <div *ngFor="let app of applicationsList(); trackBy: trackByApplicationId" class="application-card" [routerLink]="['/jobDtl',app.jobId]">
-                        <div class="card-left row">
-                            <div class="col-lg-1">
+                    <div *ngFor="let app of applicationsList(); trackBy: trackByApplicationId" class="application-card animate-on-scroll" [routerLink]="['/jobDtl',app.jobId]">
+                        <div class="card-left row fade-line">
+                            <div class="col-lg-1 fade-line">
                                 <img src="{{app.companyImage}}"> 
                             </div>
                             <div class="applicant-info col-lg-8" >
-                                <div class="d-flex">
+                                <div class="d-flex fade-line">
                                     <h4 style="padding-top: 2px;">{{app.jobTitle}}</h4>
                                 </div>
-                                <div class="d-flex">
+                                <div class="d-flex fade-line">
                                     <p>{{app.companyName}} - </p><p style="color:rgb(123, 122, 122)">{{app.companyLocation}}</p>
                                 </div>
-                                <div class="d-flex mt-2">
+                                <div class="d-flex mt-2 fade-line">
                                     <i class="bi bi-calendar-check me-2 mt-1"></i><p class="mt-1">{{app.appliedDate}}</p>
                                 </div>
 
                             </div>
                         </div>
-                        <div class="card-right">
+                        <div class="card-right fade-line">
 
                             <span class="status" [ngClass]="getStatusClass(app.status)">
                                 {{app.status}}
