--- a/src/app/features/Application/app-view/app-view.html
+++ b/src/app/features/Application/app-view/app-view.html
@@ -1,72 +1,72 @@
 
 <body>
-  <div class="nav">
+  <div class="nav fade-line">
       <a routerLink="/appViewEmp"><i class="bi bi-arrow-left me-3 fs-3"></i> </a>
       <h5 class="mt-2">Back to All Applications</h5>
   </div>
   <div class="container my-5">
     <!-- Page Header -->
-    <div class="mb-4">
+    <div class="mb-4 fade-block">
       <div class="d-flex">
-        <div class="person-icon me-3"><i class="bi bi-person"></i></div>
+        <div class="person-icon me-3 fade-line"><i class="bi bi-person"></i></div>
         <div>
-            <h1 class="fw-bold">Application Review</h1>
-            <p class="text-muted fs-5">Detailed view of candidate application</p>
+            <h1 class="fw-bold fade-line">Application Review</h1>
+            <p class="text-muted fs-5 fade-line">Detailed view of candidate application</p>
         </div>
       </div> 
     </div>
  
     <div class="row">
       <!-- Left Column -->
-      <div class="col-lg-8">
+      <div class="col-lg-8 fade-block">
         <!-- Contact Information -->
-        <div class="card card-custom p-5">
-          <div class="section-title">
+        <div class="card card-custom p-5 fade-line fade-block">
+          <div class="section-title fade-line">
             <i class="bi bi-envelope-open me-2"></i> 
             <span>Contact Information</span>
           </div>
           <div class="row gy-3">
             <div class="col-md-6">
               <div class="d-flex">
-                <div class="icon">
+                <div class="icon fade-line">
                     <i class="bi bi-person"></i>
                 </div>
                 <div>
-                    <div class="info-label">Full Name</div>
-                    <div class="info-value">{{appDetails().fullName}}</div>
+                    <div class="info-label fade-line">Full Name</div>
+                    <div class="info-value fade-line">{{appDetails().fullName}}</div>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
                 <div class="d-flex">
-                    <div class="icon">
+                    <div class="icon fade-line">
                         <i class="bi bi-telephone"></i>
                     </div>
                     <div>
-                        <div class="info-label">Phone</div>
-                        <div class="info-value">{{appDetails().phoneNumber}}</div>
+                        <div class="info-label fade-line">Phone</div>
+                        <div class="info-value fade-line">{{appDetails().phoneNumber}}</div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="d-flex">
-                    <div class="icon">
+                    <div class="icon fade-line">
                         <i class="bi bi-envelope"></i>
                     </div>
                     <div>
-                        <div class="info-label">Email</div>
-                        <div class="info-value">{{appDetails().email}}</div>
+                        <div class="info-label fade-line">Email</div>
+                        <div class="info-value fade-line">{{appDetails().email}}</div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="d-flex">
-                    <div class="icon">
+                    <div class="icon fade-line">
                         <i class="bi bi-geo-alt"></i>
                     </div>
                     <div>
-                        <div class="info-label">Location</div>
-                        <div class="info-value">{{appDetails().currentLocation}}</div>
+                        <div class="info-label fade-line">Location</div>
+                        <div class="info-value fade-line">{{appDetails().currentLocation}}</div>
                     </div>
                 </div>
             </div>
@@ -76,30 +76,30 @@
 
 
         <!-- Professional Information -->
-        <div class="card card-custom p-5">
-          <div class="section-title">
+        <div class="card card-custom p-5 fade-line fade-block">
+          <div class="section-title fade-line">
             <i class="bi bi-briefcase me-2"></i> Professional Information
           </div>
           <div class="row gy-3">
             <div class="col-md-6">
                 <div class="d-flex">
-                    <div class="icon">
+                    <div class="icon fade-line">
                         <i class="bi bi-briefcase"></i>
                     </div>
                     <div>
-                        <div class="info-label">Current Position</div>
-                        <div class="info-value">{{appDetails().currentJobTitle}}</div>
+                        <div class="info-label fade-line">Current Position</div>
+                        <div class="info-value fade-line">{{appDetails().currentJobTitle}}</div>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="d-flex">
-                    <div class="icon">
+                    <div class="icon fade-line">
                         <i class="bi bi-calendar-check"></i>
                     </div>
                     <div>
-                        <div class="info-label">Experience</div>
-                        <div class="info-value"><span class="small-badge">{{appDetails().yearsOfExperience}}</span></div>
+                        <div class="info-label fade-line">Experience</div>
+                        <div class="info-value fade-line"><span class="small-badge">{{appDetails().yearsOfExperience}}</span></div>
                     </div>
                 </div>
             </div>
@@ -107,20 +107,20 @@
         </div>
 
         <!-- Cover Letter Section -->
-        <div class="card card-custom p-5">
+        <div class="card card-custom p-5 fade-line fade-block">
             <div class="d-flex justify-content-between align-items-center">
-                <h5 class="section-title mb-0" (click)="toggleCoverLetter()" style="cursor:pointer">
-                <i class="bi bi-file-text me-2"></i> Cover Letter
+                <h5 class="section-title mb-0 fade-line" (click)="toggleCoverLetter()" style="cursor:pointer">
+                  <i class="bi bi-file-text me-2"></i> Cover Letter
                 </h5>
                 <!-- Toggle Button -->
-                <i class="bi" [ngClass]="isOpen ? 'bi-chevron-up' : 'bi-chevron-down'" 
+                <i class="bi fade-line" [ngClass]="isOpen ? 'bi-chevron-up' : 'bi-chevron-down'" 
                 style="cursor:pointer" 
                 (click)="toggleCoverLetter()"></i>
             </div>
 
             <!-- Collapsible Content -->
             <div [ngClass]="{'collapse': true, 'show': isOpen}" class="mt-4" id="coverLetterContent">
-                <div class="p-4 bg-light rounded">
+                <div class="p-4 bg-light rounded fade-line">
                 {{appDetails().coverLetter}}
                 </div>
             </div>
@@ -131,44 +131,44 @@
 
 
       <!-- Right Column -->
-      <div class="col-lg-4">
+      <div class="col-lg-4 fade-block">
         <!-- Documents & Links -->
-        <div class="card card-custom p-5">
-          <div class="section-title">Documents & Links</div>
-          <a class="btn btn-primary w-100 mb-2 btn-custom" [href]="appDetails().resumeUrl" target="_blank" >
-            <i class="bi bi-box-arrow-in-up-right me-2 text-white"></i> Open CV
-          </a>
-          <a class="btn btn-outline-secondary w-100 mb-2 btn-custom" href="https://linkedin.com" target="_blank">
-            <i class="bi bi-linkedin me-2"></i> LinkedIn
-          </a>
-          <a class="btn btn-outline-secondary w-100 btn-custom" href="https://github.com/" target="_blank">
-            <i class="bi bi-github me-2"></i> GitHub
-          </a>
-        </div>
+        <div class="card card-custom p-5 fade-line fade-block">
+          <div class="section-title fade-line">Documents & Links</div>
+            <a class="fade-line btn btn-primary w-100 mb-2 btn-custom" [href]="appDetails().resumeUrl" target="_blank" >
+              <i class="bi bi-box-arrow-in-up-right me-2 text-white"></i> Open CV
+            </a>
+            <a class="fade-line btn btn-outline-secondary w-100 mb-2 btn-custom" href="https://linkedin.com" target="_blank">
+              <i class="bi bi-linkedin me-2"></i> LinkedIn
+            </a>
+            <a class="fade-line btn btn-outline-secondary w-100 btn-custom" href="https://github.com/" target="_blank">
+              <i class="bi bi-github me-2"></i> GitHub
+            </a>
+          </div>
 
         <!-- Actions -->
-        <div class="card card-custom p-5">
-          <div class="section-title">Actions</div>
-          <button class="accept-btn w-100 btn-custom" 
+        <div class="card card-custom p-5 fade-line fade-block">
+          <div class="section-title fade-line">Actions</div>
+          <button class="accept-btn w-100 btn-custom fade-line" 
                   (click)="updateAppStatus(appDetails().id, 'Accepted')"
                   [disabled]="appDetails().status === 'Approved'">
            <i class="bi bi-check2-all me-2 text-white"></i><strong>Accept Application</strong> 
           </button>
           
 
-          <button class="under-review-btn w-100 btn-custom"
+          <button class="under-review-btn w-100 btn-custom fade-line"
                   (click)="updateAppStatus(appDetails().id, 'UnderReview')"
                   [disabled]="appDetails().status === 'UnderReview'">
             <i class="bi bi-journals me-2"></i><strong>Under Review</strong> 
           </button>
 
-          <button class="interview-btn w-100 btn-custom"
+          <button class="interview-btn w-100 btn-custom fade-line"
                   (click)="updateAppStatus(appDetails().id, 'Interviewed')"
                   [disabled]="appDetails().status === 'UnderReview'">
             <i class="bi bi-calendar-check me-2"></i><strong>Interview</strong>
           </button>
           
-          <button class="reject-btn reject-btn w-100 btn-custom"
+          <button class="reject-btn reject-btn w-100 btn-custom fade-line"
                   (click)="updateAppStatus(appDetails().id, 'Rejected')"
                   [disabled]="appDetails().status === 'Rejected'">
             <i class="bi bi-x-square me-2 text-danger"></i><strong>Reject Application</strong>
