--- a/src/app/features/profiles/employer/employer-dashboard/employer-dashboard.html
+++ b/src/app/features/profiles/employer/employer-dashboard/employer-dashboard.html
@@ -1,7 +1,7 @@
 <div class="d-flex">
     <!-- Sidebar -->
-    <div class="left-side-bar" [ngClass]="{'collapsed': !isSidebarOpen()}">
-        <div class="d-flex align-items-center mb-4">
+    <div class="left-side-bar fade-block" [ngClass]="{'collapsed': !isSidebarOpen()}">
+        <div class="d-flex align-items-center mb-4 fade-line">
             <span class="logo-icon"><i class="bi bi-suitcase-lg"></i></span>
             <div>
                 <h3>HireSmart</h3>
@@ -11,17 +11,17 @@
 
         <div class="sidebar">
             <div>
-                <h6>Main Navigation</h6>
+                <h6 class="fade-line">Main Navigation</h6>
                 <nav class="nav flex-column">
-                    <a class="nav-link" routerLink="/empDashboard"><i class="bi bi-grid-1x2-fill"></i> Dashboard</a>
-                    <a class="nav-link" routerLink="/empProfile"><i class="bi bi-building"></i> Company Profile</a>
-                    <a class="nav-link" routerLink="/empPostedJobs"><i class="bi bi-briefcase"></i> Posted Jobs</a>
-                    <a class="nav-link" routerLink="/appViewEmp"><i class="bi bi-file-earmark-text"></i> Applications</a>
-                    <a class="nav-link" routerLink="/empAnalytics"><i class="bi bi-bar-chart"></i> Analytics</a>
+                    <a class="nav-link fade-line" routerLink="/empDashboard"><i class="bi bi-grid-1x2-fill"></i> Dashboard</a>
+                    <a class="nav-link fade-line" routerLink="/empProfile"><i class="bi bi-building"></i> Company Profile</a>
+                    <a class="nav-link fade-line" routerLink="/empPostedJobs"><i class="bi bi-briefcase"></i> Posted Jobs</a>
+                    <a class="nav-link fade-line" routerLink="/appViewEmp"><i class="bi bi-file-earmark-text"></i> Applications</a>
+                    <a class="nav-link fade-line" routerLink="/empAnalytics"><i class="bi bi-bar-chart"></i> Analytics</a>
                 </nav>
             </div>
 
-            <div>
+            <div class="fade-line">
                 <h6>Settings</h6>
                 <a class="nav-link" routerLink="/editEmp" routerLinkActive="active-route"><i class="bi bi-gear"></i> Settings</a>
             </div>
@@ -33,34 +33,34 @@
     <!-- Main Content -->
     <div class="content flex-grow-1" [ngClass]="{'content-collapsed': !isSidebarOpen()}">
 
-        <app-navbar-emp [toggleSidebar]="toggleSidebar.bind(this)" [isSidebarOpen]="isSidebarOpen()"></app-navbar-emp>
+        <app-navbar-emp [toggleSidebar]="toggleSidebar.bind(this)" [isSidebarOpen]="isSidebarOpen()" class="fade-line fade-block"></app-navbar-emp>
 
 
             <div class="row">
                 <div class="p-5">
-                    <section class="profile-section">
+                    <section class="profile-section fade-line fade-block">
                         <div class="info row">
-                            <img [src]="empData().companyImage ? empData().companyImage : '/default.jpg'" alt="Company Logo" class="image mb-3">
+                            <img [src]="empData().companyImage ? empData().companyImage : '/default.jpg'" alt="Company Logo" class="image mb-3 fade-line">
 
                             <div class="col-lg-6 col-md-4 col-sm-12">
-                                <div class="emp-name">
+                                <div class="emp-name fade-line">
                                     <h2 style="font-weight: 700;">{{empData().companyName}}</h2>
                                 </div>
-                                <div class="emp-target">
+                                <div class="emp-target fade-line">
                                     <span>{{empData().industry ? empData().industry : 'No Industry Provided Yet!'}}</span>
                                 </div>
                                 <div class="my-3">
                                     <div class="d-flex">
-                                        <div class="me-4">
+                                        <div class="me-4 fade-line">
                                             <i class="bi bi-geo-alt me-2"></i>
                                             <span>{{empData().companyLocation ? empData().companyLocation : 'No Location Provided Yet!'}}</span>
                                         </div>
-                                        <div>
+                                        <div class="fade-line">
                                             <i class="bi bi-link-45deg me-2" style="font-size: larger;"></i>
                                             <span>{{empData().website ? empData().website : 'No Website Provided Yet!'}}</span>
                                         </div>
                                     </div>
-                                    <div class="mt-1">
+                                    <div class="mt-1 fade-line">
                                         <i class="bi bi-people me-2"></i>
                                         <span>{{empData().employeeRange ? empData().employeeRange : 'No Employee Range Provided Yet!'}} Employees </span>
                                     </div>
@@ -68,7 +68,7 @@
 
                             </div>
 
-                            <div class="col-lg-3 col-md-5 col-sm-3">
+                            <div class="col-lg-3 col-md-5 col-sm-3 fade-line">
                                 <div class="d-flex flex-column align-items-end">
                                     <button class="post-new-job-btn mb-2" routerLink="/addJob"><i class="bi bi-plus me-3"></i> Post New Job </button>
                                     <button class="edit-profile-btn" routerLink="/editEmp"><i class="bi bi-gear me-3"></i> Edit Profile </button>
@@ -78,21 +78,21 @@
                     </section>
 
 
-                    <div class="d-flex mt-4">
-                        <a class="selected-route" routerLink="/empDashboard" routerLinkActive="active-route" [routerLinkActiveOptions]="{exact:true}">
+                    <div class="d-flex mt-4 fade-block">
+                        <a class="selected-route fade-line" routerLink="/empDashboard" routerLinkActive="active-route" [routerLinkActiveOptions]="{exact:true}">
                             Dashboard
                         </a>
-                        <a class="selected-route" routerLink="/empProfile" routerLinkActive="active-route">
+                        <a class="selected-route fade-line" routerLink="/empProfile" routerLinkActive="active-route">
                             Company Profile
                         </a>
-                        <a class="selected-route" routerLink="/empAnalytics" routerLinkActive="active-route">
+                        <a class="selected-route fade-line" routerLink="/empAnalytics" routerLinkActive="active-route">
                             Analytics
                         </a>
                     </div>
-                    </div>
+                </div>
             </div>
        
-        <div class="p-3">
+        <div class="p-3 fade-block">
             <router-outlet></router-outlet>
         </div>    
 
